--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
   <string name="movie_detail_fragment">Details</string>
   <string name="movie_list_top_rated">Top Rated Movies</string>
   <string name="credits">Credits</string>
+  <string name="cast_photo">Cast Photo</string>
+  <string name="crew_photo">Crew Photo</string>
+  <string name="cast_title">Cast</string>
+  <string name="crew_title">Crew</string>
 </resources>
